Rephrase "Class Assignment" -> "Class Project"

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -15,7 +15,7 @@
         "thumbnail": "./images/attitude-indicator/thumbnail.jpg",
         "tags": [
             "Nexys_A7-3d902a",
-            "Class_Assignment-blue",
+            "Class_Project-blue",
             "Completed_2024-green"
         ]
     },
@@ -25,7 +25,7 @@
         "thumbnail": "./images/turret/thumbnail.jpg",
         "tags": [
             "Raspberry_Pi_5-e00053",
-            "Class_Assignment-blue",
+            "Class_Project-blue",
             "Completed_2024-green"
         ]
     },
@@ -53,7 +53,7 @@
         "thumbnail": "https://github.com/Raymond-exe/Conway.v/assets/42707243/cc5fa935-eb8a-4adc-9eb4-0fd7a96c14f7",
         "tags": [
             "Nexys_A7-3d902a",
-            "Class_Assignment-blue",
+            "Class_Project-blue",
             "Completed_2023-green"
         ]
     },
