--- a/projects/config.json
+++ b/projects/config.json
@@ -1,6 +1,6 @@
 [
     {
-        "title": "QT-P1 Mini Audio-Video Astromech Droid",
+        "title": "QT-P1: A Mini\nAudio-Video Astromech Droid",
         "file": "./projects/astromech.md",
         "thumbnail": "./images/astromech/closeup-1.jpg",
         "tags": [
