--- a/booplatro/config.json
+++ b/booplatro/config.json
@@ -51,7 +51,7 @@
             "src": "../images/booplatro/vaultboy.png"
         },
         {
-            "name": "Deathclaw Queen",
+            "name": "Deathclaw",
             "description": "Birthday message here",
             "src": "../images/booplatro/deathclaw.png"
         },
