--- a/booplatro/config.json
+++ b/booplatro/config.json
@@ -16,7 +16,7 @@
             "src": "../images/booplatro/jane.png"
         },
         {
-            "name": "Hollow Knight",
+            "name": "The Knight",
             "description": "Birthday message here",
             "src": "../images/booplatro/hollow.png"
         },
@@ -56,7 +56,7 @@
             "src": "../images/booplatro/deathclaw.png"
         },
         {
-            "name": "John Fallout",
+            "name": "Paladin",
             "description": "Birthday message here",
             "src": "../images/booplatro/powerarmor.png"
         }
