--- a/booplatro/config.json
+++ b/booplatro/config.json
@@ -61,7 +61,7 @@
             "src": "../images/booplatro/deathclaw.png"
         },
         {
-            "name": "Paladin",
+            "name": "John Fallout",
             "description": "Birthday message here",
             "src": "../images/booplatro/powerarmor.png"
         },
