Create audio dir + win sound

--- a/booplatro/config.json
+++ b/booplatro/config.json
@@ -27,7 +27,7 @@
             "description": "HAPPY BIRTHDAYYYYYYYYYYYYYYYYYYYYYY!!!!!!!!!!!!! ",
             "fullmessage": "HAPPY BIRTHDAYYYYYYYYYYYYYYYYYY!!!!!!!!! I so very grateful that you and I are friends! Thank you for all the laughs and wonderful conversations. You are an amazing buhhhddyyyy. I SEND ALL MY LOVE!🤍",
             "src": "../images/booplatro/clar.png",
-            "audio": "./lizard.wav"
+            "audio": "./audio/lizard.wav"
         },
         {
             "name": "Raymond",
